--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@dcloudio/uni-mp-toutiao": "*",
     "@dcloudio/uni-mp-weixin": "*",
     "flyio": "^0.6.2",
+    "fuse.js": "^3.4.4",
     "node-sass": "^4.11.0",
     "regenerator-runtime": "^0.12.1",
     "sass-loader": "^7.1.0",
