--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
     "name" : "demo",
-    "appid" : "__UNI__D7F4BE5",
-    "description" : "",
+    "appid" : "__UNI__7630A9D",
+    "description" : "面试demo",
     "versionName" : "1.0.0",
     "versionCode" : "100",
     "transformPx" : false,
